projects/components/src/multi-select/multi-select.component.scss
@import 'mixins';

.multi-select {
  display: flex;
  align-items: center;
  border: 1px solid $color-border;
  border-radius: 6px;
  height: 100%;
  width: 100%;

  .multi-select-container {
    width: 100%;
  }

  &.disabled {
    opacity: 0.4;
  }

  .trigger-content {
    display: flex;
    align-items: center;
    padding: 0 8px;
    cursor: pointer;
    height: 34px;

    &.justify-left {
      justify-content: flex-start;
    }

    &.justify-right {
      justify-content: flex-end;
    }

    &.justify-center {
      justify-content: center;
    }

    .trigger-prefix-icon {
      padding-right: 8px;
    }

    .trigger-label {
      @include body-2-medium();
      padding-left: 8px;
    }

    .trigger-icon {
      padding: 0 8px;
      margin-left: auto;
    }
  }
}

.multi-select-content {
  @include dropdown();
  min-width: 120px;
  max-height: 204px;

  .multi-select-option {
    display: flex;
    height: 34px;
    padding: 4px 16px;
    cursor: pointer;
    font-size: 14px;
    align-items: center;
    justify-content: space-between;

    .checkbox {
      margin-right: 8px;
    }

    .icon {
      margin-right: 8px;
    }

    .label {
      margin-right: 8px;
    }

    &:hover {
      background: $gray-1;
    }
  }
}

